// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`namespace local and global should not strip a different local namespace 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for other.namespace.MyService",
    "entryPoints": [
      "/odata/v4/my",
    ],
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:other.namespace.MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:other.namespace.MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-api:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:other.namespace.MyService:v1/other.namespace.MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:other.namespace.MyService:v1/other.namespace.MyService.edmx",
      },
    ],
    "shortDescription": "Short description of other.namespace.MyService",
    "title": "other.namespace.MyService",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`namespace local and global should strip application namespace from local namespace 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for customer.testNamespace.nested.MyService",
    "entryPoints": [
      "/odata/v4/my",
    ],
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:nested.MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:nested.MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-api:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:nested.MyService:v1/customer.testNamespace.nested.MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:nested.MyService:v1/customer.testNamespace.nested.MyService.edmx",
      },
    ],
    "shortDescription": "Short description of customer.testNamespace.nested.MyService",
    "title": "customer.testNamespace.nested.MyService",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`namespace local and global should strip application namespace if its the same as local namespace 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for customer.testNamespace.MyService",
    "entryPoints": [
      "/odata/v4/my",
    ],
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-api:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/customer.testNamespace.MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/customer.testNamespace.MyService.edmx",
      },
    ],
    "shortDescription": "Short description of customer.testNamespace.MyService",
    "title": "customer.testNamespace.MyService",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;
